--- a/support.html
+++ b/support.html
@@ -4,60 +4,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support - 8bit Chess Puzzles</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
+            font-family: 'Press Start 2P', cursive;
+            line-height: 1.8;
+            max-width: 900px;
             margin: 0 auto;
             padding: 20px;
-            color: #333;
-            background-color: #f9f9f9;
+            color: #ffffff;
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            min-height: 100vh;
         }
         .container {
-            background: white;
+            background: rgba(42, 42, 42, 0.95);
             padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border-radius: 20px;
+            border: 2px solid #3a3a3a;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.3);
         }
-        h1, h2 {
-            color: #2c3e50;
+        .header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .title {
+            color: #FFD700;
+            font-size: 16px;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 0px #333;
+        }
+        .subtitle {
+            color: #00ff00;
+            font-size: 8px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #00ff00;
+            font-size: 12px;
+            margin: 25px 0 15px 0;
+            text-shadow: 1px 1px 0px #333;
         }
         .contact-info {
-            background: #e8f4f8;
+            background: rgba(0, 255, 0, 0.1);
             padding: 20px;
             border-radius: 8px;
+            border: 1px solid #00ff00;
             margin: 20px 0;
         }
         .faq-item {
             margin-bottom: 20px;
             padding: 15px;
-            background: #f8f9fa;
-            border-left: 4px solid #3498db;
+            background: rgba(58, 58, 58, 0.8);
+            border: 1px solid #555;
+            border-radius: 8px;
+            border-left: 4px solid #00ffff;
+        }
+        .faq-item h3 {
+            color: #00ffff;
+            font-size: 9px;
+            margin: 0 0 10px 0;
+        }
+        .faq-item p {
+            font-size: 7px;
+            color: #cccccc;
+            margin: 0;
         }
         .email-link {
-            color: #3498db;
+            color: #FFD700;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: normal;
         }
         .email-link:hover {
-            text-decoration: underline;
+            color: #00ff00;
+            text-shadow: 0 0 5px #00ff00;
+        }
+        .section-text {
+            font-size: 8px;
+            color: #ffffff;
+            margin: 10px 0;
+        }
+        .list-item {
+            font-size: 7px;
+            color: #cccccc;
+            margin: 5px 0;
+            padding-left: 15px;
+        }
+        .highlight-box {
+            background: rgba(255, 215, 0, 0.1);
+            border: 1px solid #FFD700;
+            border-radius: 8px;
+            padding: 15px;
+            margin: 20px 0;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            padding-top: 20px;
+            border-top: 1px solid #555;
+            color: #888;
+            font-size: 6px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Support - 8bit Chess Puzzles</h1>
-        <p>Need help with our chess puzzle game? We're here to assist you!</p>
-
-        <div class="contact-info">
-            <h2>📧 Contact Us</h2>
-            <p><strong>Email:</strong> <a href="mailto:128bit.studios@gmail.com" class="email-link">128bit.studios@gmail.com</a></p>
-            <p><strong>Response Time:</strong> We typically respond within 24-48 hours</p>
-            <p><strong>Developer:</strong> 128 Bit Studios</p>
+        <div class="header">
+            <h1 class="title">8BIT CHESS</h1>
+            <div class="subtitle">PUZZLES</div>
+            <div class="subtitle">SUPPORT CENTER</div>
         </div>
 
-        <h2>❓ Frequently Asked Questions</h2>
+        <div class="contact-info">
+            <h2>CONTACT US</h2>
+            <p class="section-text"><strong>Email:</strong> <a href="mailto:128bit.studios@gmail.com" class="email-link">128bit.studios@gmail.com</a></p>
+            <p class="section-text"><strong>Response Time:</strong> 24-48 hours</p>
+            <p class="section-text"><strong>Developer:</strong> 128 Bit Studios</p>
+        </div>
+
+        <h2>FREQUENTLY ASKED QUESTIONS</h2>
 
         <div class="faq-item">
             <h3>How do I restore my premium purchase?</h3>
@@ -81,7 +145,7 @@
 
         <div class="faq-item">
             <h3>How do hints work?</h3>
-            <p>You get 3 free hints daily. Earn additional hints by solving puzzles without using hints. Premium users get unlimited daily hints.</p>
+            <p>You get 3 free hints daily. Earn additional hints by solving puzzles without using hints.</p>
         </div>
 
         <div class="faq-item">
@@ -94,24 +158,26 @@
             <p>Refunds are handled by Apple. Go to Settings → Apple ID → Media & Purchases → View Account → Purchase History → Find the purchase → Report a Problem.</p>
         </div>
 
-        <h2>🐛 Bug Reports</h2>
-        <p>Found a bug? Please email us with:</p>
-        <ul>
-            <li>Your device model (e.g., iPhone 14 Pro)</li>
-            <li>iOS version</li>
-            <li>App version</li>
-            <li>Steps to reproduce the issue</li>
-            <li>Screenshots if applicable</li>
-        </ul>
+        <h2>BUG REPORTS</h2>
+        <p class="section-text">Found a bug? Please email us with:</p>
+        <div class="list-item">• Your device model (e.g., iPhone 14 Pro)</div>
+        <div class="list-item">• iOS version</div>
+        <div class="list-item">• App version</div>
+        <div class="list-item">• Steps to reproduce the issue</div>
+        <div class="list-item">• Screenshots if applicable</div>
 
-        <h2>💡 Feature Requests</h2>
-        <p>We love hearing your ideas! Send us your suggestions for new features, themes, or improvements.</p>
+        <h2>FEATURE REQUESTS</h2>
+        <p class="section-text">We love hearing your ideas! Send us your suggestions for new features, themes, or improvements.</p>
 
-        <h2>⭐ Leave a Review</h2>
-        <p>Enjoying the game? Please consider leaving a review on the App Store. Your feedback helps us improve and reach more chess puzzle enthusiasts!</p>
+        <h2>LEAVE A REVIEW</h2>
+        <p class="section-text">Enjoying the game? Please consider leaving a review on the App Store. Your feedback helps us improve and reach more chess puzzle enthusiasts!</p>
 
-        <div class="contact-info">
-            <p><strong>Still need help?</strong> Don't hesitate to reach out to us at <a href="mailto:128bit.studios@gmail.com" class="email-link">128bit.studios@gmail.com</a></p>
+        <div class="highlight-box">
+            <p class="section-text"><strong>Still need help?</strong> Don't hesitate to reach out to us at <a href="mailto:128bit.studios@gmail.com" class="email-link">128bit.studios@gmail.com</a></p>
+        </div>
+
+        <div class="footer">
+            © 2024 128 Bit Studios
         </div>
     </div>
 </body>
