--- a/support.html
+++ b/support.html
@@ -13,15 +13,16 @@
             margin: 0 auto;
             padding: 20px;
             color: #ffffff;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            background: #0F0F1A;
             min-height: 100vh;
         }
         .container {
-            background: rgba(42, 42, 42, 0.95);
+            background: rgba(42, 42, 58, 0.7);
             padding: 30px;
             border-radius: 20px;
-            border: 2px solid #3a3a3a;
-            box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+            border: 2px solid #3a3a4a;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 32px rgba(0,0,0,0.4);
         }
         .header {
             text-align: center;
@@ -31,38 +32,48 @@
             color: #FFD700;
             font-size: 16px;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 0px #333;
+            text-shadow: 0 0 10px #FFD700, 2px 2px 0px #333;
         }
         .subtitle {
-            color: #00ff00;
+            color: #ff006e;
             font-size: 8px;
             margin-bottom: 20px;
+            text-shadow: 0 0 5px #ff006e;
         }
         h2 {
             color: #00ff00;
             font-size: 12px;
             margin: 25px 0 15px 0;
-            text-shadow: 1px 1px 0px #333;
+            text-shadow: 0 0 8px #00ff00;
         }
         .contact-info {
             background: rgba(0, 255, 0, 0.1);
             padding: 20px;
-            border-radius: 8px;
+            border-radius: 15px;
             border: 1px solid #00ff00;
+            backdrop-filter: blur(10px);
             margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(0,255,0,0.2);
         }
         .faq-item {
             margin-bottom: 20px;
             padding: 15px;
-            background: rgba(58, 58, 58, 0.8);
-            border: 1px solid #555;
-            border-radius: 8px;
+            background: rgba(42, 42, 58, 0.6);
+            border: 2px solid #3a3a4a;
+            border-radius: 15px;
+            backdrop-filter: blur(15px);
             border-left: 4px solid #00ffff;
+            transition: all 0.3s ease;
+        }
+        .faq-item:hover {
+            border-color: #00ffff;
+            box-shadow: 0 4px 15px rgba(0,255,255,0.2);
         }
         .faq-item h3 {
             color: #00ffff;
             font-size: 9px;
             margin: 0 0 10px 0;
+            text-shadow: 0 0 5px #00ffff;
         }
         .faq-item p {
             font-size: 7px;
@@ -75,8 +86,8 @@
             font-weight: normal;
         }
         .email-link:hover {
-            color: #00ff00;
-            text-shadow: 0 0 5px #00ff00;
+            color: #00ffff;
+            text-shadow: 0 0 8px #00ffff;
         }
         .section-text {
             font-size: 8px;
@@ -92,9 +103,11 @@
         .highlight-box {
             background: rgba(255, 215, 0, 0.1);
             border: 1px solid #FFD700;
-            border-radius: 8px;
+            border-radius: 15px;
+            backdrop-filter: blur(10px);
             padding: 15px;
             margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(255,215,0,0.2);
         }
         .footer {
             text-align: center;
